[package]
name = "craps"
version = "0.1.0"
edition = "2018"

[dependencies]
rand = { version = "^0.8", features = [ "small_rng" ] }
rayon = "^1.5"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
